# Trinity

./: CMakeLists.txt  README.md  pom.xml
.github/: maven-settings.xml
.github/workflows/: post-to-x.yml
source/: TrinityEditor.cpp  TrinityEditor.h  TrinityProcessor.cpp  TrinityProcessor.h
source/components/: AudioMeter.cpp  AudioMeter.h  AudioSpectrumMeters.cpp  AudioSpectrumMeters.h  GraphicalSpectrumAnalyzer.cpp  GraphicalSpectrumAnalyzer.h
source/models/: BandFrequencies.h  BandTints.h  FrequencyRange.h  MeterDbScaleSpec.h  MeterInfo.h  MeterLayoutMetrics.h  MeterVisualStyle.h  PlotGeometry.h  SegmentedFrequencyLayout.h  SignalDebugBin.h  SoloMode.h  SpectrumAnalyzerStyle.h  TestSignalType.h  UiDynamicsSettings.h
source/services/: AudioProcessorTest.h  LevelColourScale.h  SpectrumProcessing.h  UiMagnitudeProcessor.h
test/: CMakeLists.txt  trinity_tests.cpp
